--- a/ApplicationWinforms/ApplicationWinforms.csproj
+++ b/ApplicationWinforms/ApplicationWinforms.csproj
@@ -67,6 +67,9 @@
     <Compile Include="Niveau.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Niveau.designer.cs">
+      <DependentUpon>Niveau.cs</DependentUpon>
+    </Compile>
     <Compile Include="Prof.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -80,6 +83,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Matiere.resx">
       <DependentUpon>Matiere.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Niveau.resx">
+      <DependentUpon>Niveau.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
