--- a/ApplicationWinforms/ApplicationWinforms.csproj
+++ b/ApplicationWinforms/ApplicationWinforms.csproj
@@ -70,6 +70,9 @@
     <Compile Include="Emploi.designer.cs">
       <DependentUpon>Emploi.cs</DependentUpon>
     </Compile>
+    <Compile Include="Groupe.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Matiere.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,8 +85,14 @@
     <Compile Include="Niveau.designer.cs">
       <DependentUpon>Niveau.cs</DependentUpon>
     </Compile>
+    <Compile Include="Prof.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Seance.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <EmbeddedResource Include="Accueil.resx">
       <DependentUpon>Accueil.cs</DependentUpon>
     </EmbeddedResource>
