--- a/ApplicationWinforms/ApplicationWinforms.csproj
+++ b/ApplicationWinforms/ApplicationWinforms.csproj
@@ -73,6 +73,9 @@
     <Compile Include="Groupe.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Groupe.designer.cs">
+      <DependentUpon>Groupe.cs</DependentUpon>
+    </Compile>
     <Compile Include="Matiere.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,6 +107,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Emploi.resx">
       <DependentUpon>Emploi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Groupe.resx">
+      <DependentUpon>Groupe.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Matiere.resx">
       <DependentUpon>Matiere.cs</DependentUpon>
